--- a/slides/2019/08-aug/index.pug
+++ b/slides/2019/08-aug/index.pug
@@ -45,7 +45,7 @@ html
       .shim(style='opacity:.5;')
     
     section.slide
-      h2 Bleeding Edge Web: August 2019
+      h2 Bleeding Edge Web: Aug 2019
 
       h3.star News From the Bleeding Edge
       p.indent
@@ -249,7 +249,7 @@ html
       img(src='../../shared/resources/images/react-logo.png', class='corner-image', width='200px', alt='React')
       ul
         li
-          a(href="http://electronjs.org/blog/electron-6-0") Released
+          a(href="https://reactjs.org/blog/2019/08/08/react-v16.9.0.html") Released
           |  August 8th
         li codemod: 
           span.code componentWill*
@@ -302,8 +302,10 @@ html
     section.slide
       h2 GitHub Supports CI/CD
       ul 
-        li GitHub Actions now 
-          a(href="https://github.blog/2019-08-08-github-actions-now-supports-ci-cd/") support CI/CD
+        li GitHub 
+          a(href="https://github.com/features/actions") Actions
+          |  now support 
+          a(href="https://github.blog/2019-08-08-github-actions-now-supports-ci-cd/") continuous integration
         li Reusable actions and workflows
         li Integrates with the 
           a(href="https://github.com/features/package-registry") GitHub Package Registry
